Improve logout API to only support valid client domains and allow cross-site requests when appropriate
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/OAuth2Server/trunk@16117 4235af6a-31f9-0310-9ad3-ecf6348f2534